[gd_scene load_steps=17 format=2]

[ext_resource path="res://source/Game.gd" type="Script" id=1]
[ext_resource path="res://source/debug/DebugOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/maps/6PlayerMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/TheCrown.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/MainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/PauseScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/JoiningScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/MenuButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/ControllerAssigner.tscn" type="PackedScene" id=9]
[ext_resource path="res://source/PlayerManager.gd" type="Script" id=10]
[ext_resource path="res://source/MapSelector.gd" type="Script" id=11]
[ext_resource path="res://source/CoinManager.gd" type="Script" id=12]
[ext_resource path="res://source/PlatformManager.gd" type="Script" id=13]
[ext_resource path="res://source/GameTimer.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/OurMusicBox _CanCan.ogg" type="AudioStream" id=15]
[ext_resource path="res://source/FPS.tscn" type="PackedScene" id=16]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="DebugOverlay" parent="." index="0" instance=ExtResource( 2 )]

mouse_default_cursor_shape = 0
debug_crown = false
enable_slo_mo = true
slo_mo_scale = 0.05

[node name="Map" parent="." index="1" instance=ExtResource( 3 )]

editor/display_folded = true
map_name = "Map Name"

[node name="TheCrown" parent="." index="2" instance=ExtResource( 4 )]

[node name="MainMenu" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
margin_right = -64.0
margin_bottom = -64.0

[node name="PauseScreen" parent="." index="4" instance=ExtResource( 6 )]

visible = false
margin_left = -32.0
margin_top = -32.0
margin_right = 928.0
margin_bottom = 508.0

[node name="JoiningScreen" parent="." index="5" instance=ExtResource( 7 )]

visible = false

[node name="MenuButton" parent="." index="6" instance=ExtResource( 8 )]

margin_top = 516.0
margin_right = 928.0
margin_bottom = 570.0

[node name="ControllerAssigner" parent="." index="7" instance=ExtResource( 9 )]

[node name="PlayerManager" type="Node2D" parent="." index="8"]

visible = false
script = ExtResource( 10 )

[node name="MapSelector" type="Node2D" parent="." index="9"]

visible = false
script = ExtResource( 11 )

[node name="CoinManager" type="Node2D" parent="." index="10"]

visible = false
script = ExtResource( 12 )

[node name="PlatformManager" type="Node2D" parent="." index="11"]

visible = false
script = ExtResource( 13 )

[node name="GameTimer" parent="." index="12" instance=ExtResource( 14 )]

[node name="MusicBox" type="AudioStreamPlayer" parent="." index="13"]

stream = ExtResource( 15 )
volume_db = -5.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Transform" ]

[node name="FPS" parent="." index="14" instance=ExtResource( 16 )]

visible = false
margin_right = 886.0
margin_bottom = 24.0

[connection signal="countdown_started" from="." to="GameTimer" method="start_counting_down"]

[connection signal="game_over" from="." to="MenuButton" method="show_in_secs"]

[connection signal="game_over" from="." to="." method="show_mouse"]

[connection signal="game_over" from="." to="PlayerManager" method="pause_freeze_timer"]

[connection signal="game_over" from="." to="PlayerManager" method="freeze_players"]

[connection signal="game_over" from="." to="CoinManager" method="stop_spawners"]

[connection signal="game_over" from="." to="TheCrown" method="keep_winner_jumping"]

[connection signal="game_paused" from="." to="." method="_pause_tree"]

[connection signal="game_paused" from="." to="." method="show_mouse"]

[connection signal="game_paused" from="." to="JoiningScreen" method="hide"]

[connection signal="game_resumed" from="." to="." method="hide_mouse"]

[connection signal="game_resumed" from="." to="." method="_resume_tree"]

[connection signal="game_resumed" from="." to="JoiningScreen" method="show_if_not_closed"]

[connection signal="game_started" from="." to="." method="hide_mouse"]

[connection signal="game_started" from="." to="PlayerManager" method="enable_ai"]

[connection signal="game_started" from="." to="PlayerManager" method="unfreeze_players"]

[connection signal="game_started" from="." to="PlayerManager" method="choose_crocodile_randomly"]

[connection signal="game_started" from="." to="PlayerManager" method="reset_positions"]

[connection signal="game_started" from="." to="CoinManager" method="resume_spawners"]

[connection signal="game_started" from="." to="JoiningScreen" method="close"]

[connection signal="joining_screen_opened" from="." to="ControllerAssigner" method="reset"]

[connection signal="joining_screen_opened" from="." to="PlayerManager" method="disable_ai"]

[connection signal="joining_screen_opened" from="." to="PlayerManager" method="unfreeze_players"]

[connection signal="joining_screen_opened" from="." to="PlayerManager" method="reset_positions"]

[connection signal="joining_screen_opened" from="." to="PlayerManager" method="reset"]

[connection signal="joining_screen_opened" from="." to="CoinManager" method="stop_spawners"]

[connection signal="joining_screen_opened" from="." to="CoinManager" method="clear"]

[connection signal="joining_screen_opened" from="." to="TheCrown" method="stop_winner_jumping"]

[connection signal="joining_screen_opened" from="." to="TheCrown" method="reset"]

[connection signal="joining_screen_opened" from="." to="PlatformManager" method="stop_bounce_tween"]

[connection signal="joining_screen_opened" from="." to="JoiningScreen" method="open"]

[connection signal="main_menu_opened" from="." to="." method="stop_counting_down"]

[connection signal="main_menu_opened" from="." to="." method="show_mouse"]

[connection signal="main_menu_opened" from="." to="." method="resume"]

[connection signal="main_menu_opened" from="." to="PlayerManager" method="enable_ai"]

[connection signal="main_menu_opened" from="." to="PlayerManager" method="reset_controllers"]

[connection signal="main_menu_opened" from="." to="PlayerManager" method="choose_crocodile_randomly"]

[connection signal="main_menu_opened" from="." to="CoinManager" method="resume_spawners"]

[connection signal="main_menu_opened" from="." to="JoiningScreen" method="close"]

[connection signal="map_loaded" from="." to="PlayerManager" method="choose_crocodile_randomly"]

[connection signal="map_loaded" from="." to="PlayerManager" method="listen_to_players_collecting_coins"]

[connection signal="map_loaded" from="." to="PlayerManager" method="reset"]

[connection signal="map_loaded" from="." to="TheCrown" method="stop_winner_jumping"]

[connection signal="map_preloaded" from="." to="TheCrown" method="reset"]

[connection signal="duration_pressed" from="MainMenu" to="GameTimer" method="next_duration"]

[connection signal="map_pressed" from="MainMenu" to="MapSelector" method="next_map"]

[connection signal="play_pressed" from="MainMenu" to="." method="open_joining_screen"]

[connection signal="play_pressed" from="MainMenu" to="." method="hide_mouse"]

[connection signal="pressed" from="MenuButton" to="." method="open_main_menu"]

[connection signal="player_get_coin" from="PlayerManager" to="TheCrown" method="on_player_coins_collected"]


[editable path="Map"]
